--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.25.8",
-    "@strapi/plugin-users-permissions": "4.25.8",
-    "@strapi/plugin-i18n": "4.25.8",
     "@strapi/plugin-cloud": "4.25.8",
+    "@strapi/plugin-graphql": "^4.25.8",
+    "@strapi/plugin-i18n": "4.25.8",
+    "@strapi/plugin-users-permissions": "4.25.8",
+    "@strapi/strapi": "4.25.8",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-email-designer": "^2.2.1",
     "styled-components": "5.3.3"
   },
   "author": {
